# DRUVA

./: .gitignore  DHRUVA_Complete_Plan.md  DHRUVA_Logo_Design_Prompt.md  IMPLEMENTATION_GUIDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/grpc/: server.py
backend/app/api/rest/: __init__.py
backend/app/api/websocket/: streaming.py
backend/app/brokers/: __init__.py  _rest_helpers.py  alice_blue.py  angel_one.py  base.py  dhan.py  factory.py  five_paisa.py  fyers.py  health_monitor.py  kotak_neo.py  latency_wrapper.py  paper.py  shoonya.py  upstox.py  zerodha.py
backend/app/cache/: client.py  keys.py
backend/app/core/: errors.py
backend/app/core/advisor/: __init__.py  allocator.py  indicators.py  llm.py  macro.py  scoring.py  service.py
backend/app/core/ai/: portfolio_advisor.py  sentiment_engine.py
backend/app/core/audit/: __init__.py  event_store.py
backend/app/core/auth/: __init__.py  dependencies.py  password.py  service.py  tokens.py
backend/app/core/execution/: __init__.py  (+6 more)
backend/app/data/: ohlcv_repository.py
backend/app/db/: base.py  session.py
backend/app/infrastructure/: __init__.py  encryption.py  health.py  http.py  jobs.py  logging.py  metrics.py  redis.py  scheduler.py  secret_tokens.py  tracing.py
backend/app/mcp/: README.md  __init__.py  server.py
backend/app/middleware/: auth_context.py  correlation_id.py  error_handler.py  rate_limit.py  request_logging.py
backend/app/schemas/: advisor.py  auth.py  order.py
backend/app/scripts/: backtest.py
backend/app/strategies/: __init__.py  base.py  registry.py
backend/scripts/: generate_proto.sh  run_walk_forward.py  seed_market_calendar.py  train_regime_hmm.py
backend/tests/integration/: test_health.py  test_regime_executor_e2e.py
backend/tests/unit/: test_allocator_sizing.py  test_encryption.py  test_health_monitor.py  test_latency_wrapper.py  test_logging.py  test_market_cycle_classifier.py  test_momentum_strategy.py  test_password.py  test_risk_engine.py  test_roc_indicator.py  test_screener_parser.py  test_secret_tokens.py  test_telegram_message_format.py  test_tokens.py  test_vcp_indicator.py  test_xgboost_signal_dummy.py
(+301 files in other folders)
